fix(quarkus): overhaul authentication for Quarkus
fix #2849